Fix bug with the navbar and add presonalized icons upload capabilities in admin pannel
